--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-reanimated": "^1.4.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-animated-switch": "^0.4.1",
+    "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^1.10.3"
   },
   "devDependencies": {
