--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-animated-switch": "^0.4.1",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.5",
